feat: add music

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
   "cSpell.words": [
     "Mobx",
     "Popconfirm",
-    "hzfe"
+    "albumartist",
+    "flac",
+    "hzfe",
+    "jsmediatags",
+    "localforage"
   ]
 }
