--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/howler": "^2.2.1",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.161",
     "@types/node": "^12.0.0",
@@ -13,10 +14,13 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.3",
+    "howler": "^2.2.1",
+    "localforage": "^1.9.0",
     "lodash": "^4.17.20",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
     "moment": "^2.27.0",
+    "music-metadata-browser": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
