fix: remove node-sass add sass

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "mobx-react": "^6.3.0",
     "moment": "^2.27.0",
     "music-metadata-browser": "^2.2.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sass": "^1.32.4",
     "typescript": "~3.7.2",
     "worker-loader": "^3.0.2"
   },
