--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "sass": "^1.32.4",
-    "typescript": "~3.7.2",
+    "typescript": "^4.1.3",
     "worker-loader": "^3.0.2"
   },
   "scripts": {
