--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.3",
+    "fast-average-color": "^6.3.0",
     "howler": "^2.2.1",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
@@ -21,6 +22,7 @@
     "mobx-react": "^6.3.0",
     "moment": "^2.27.0",
     "music-metadata-browser": "^2.2.0",
+    "polished": "^4.0.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
