--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.3",
     "fast-average-color": "^6.3.0",
+    "filesize": "^6.1.0",
     "howler": "^2.2.1",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
