feat: 歌曲列表和歌词添加全局联动

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "dev": "react-app-rewired start",
     "build": "react-app-rewired build --max-old-space-size=8192",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
