feat: 新增css全局变量，做颜色替换

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.3",
+    "customize-cra": "^1.0.0",
     "fast-average-color": "^6.3.0",
     "filesize": "^6.1.0",
     "howler": "^2.2.1",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
     "mobx": "^5.15.6",
